joli bouton *_* <3 UwU

--- a/website/views/menu.html
+++ b/website/views/menu.html
@@ -3,6 +3,7 @@
 <meta charset="utf-8">
 <title>Food Blog</title>
 <link rel="stylesheet" href="/stylesheets/styles.css">
+<link rel="stylesheet" href="/stylesheets/menu.css">
 </head>
 
 <body>
@@ -17,6 +18,12 @@
             </li>
             <li>
                 <a href="#">Level 3</a>
+            </li>
+            <li>
+                <br></br>
+                <button class="neon-button">
+                    <a href="/articles/delete">Reinitialisation du TP</a>
+                </button>
             </li>
         </ul>
     </div>
