--- a/website/views/menu.html
+++ b/website/views/menu.html
@@ -14,7 +14,7 @@
                 <a href="#">Level 1</a>
             </li>
             <li>
-                <a href="#">Level 2</a>
+                <a href="/level/2?page=1">Level 2</a>
             </li>
             <li>
                 <a href="#">Level 3</a>
