--- a/website/views/login.html
+++ b/website/views/login.html
@@ -6,11 +6,11 @@
 </head>
 
 <body>
-    <div class='container' method="POST">
-        <h1>Login</h1>
-        <form action="/login">
+    <div class='container'>
+        <h1>Register</h1>
+        <form action="/user/add" method="POST">
             <input type="text" name="username">
-            <button type="submit">Se connecter</button>
+            <button type="submit">S'enregistrer</button>
         </form>
     </div>
 </body>
