--- a/website/views/Level/1.html
+++ b/website/views/Level/1.html
@@ -1,63 +1,45 @@
 <!doctype html>
 <html lang="fr">
 <meta charset="utf-8">
-<title>Food Blog</title>
+<title>level 2</title>
 <link rel="stylesheet" href="/stylesheets/styles.css">
 </head>
 
 <body>
     <div style="display: flex;">
         <div style="flex: 7 auto">
-            <h1>Liste des articles </h1>
-            <div class="container" id="data">
+            <h1>Level 1</h1>
+            <div class="container" style="font-size: 50px;">
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque ullam vel cumque expedita totam id
+                    quam voluptates, error suscipit delectus quia at maxime natus eum perferendis autem ad earum? Nam?
+                </p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, repellat. Possimus ex incidunt
+                    corporis rerum, voluptatum tempore odio deserunt est, nostrum, blanditiis porro. Beatae sint maiores
+                    officia cumque odio dolorem! Lorem ipsum dolor sit amet consectetur adipisicing elit. Et natus
+                    placeat facere reiciendis ducimus nostrum hic nihil doloribus, dolores ipsum in. Ipsa excepturi
+                    repellat repudiandae sed eveniet omnis fugiat maxime. Lorem ipsum dolor sit amet consectetur
+                    adipisicing elit. Sunt, voluptates magni esse deserunt iste ex dignissimos quo dolore. Optio fuga
+                    similique laborum provident numquam odio voluptatum autem dolorem sequi quae.</p>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque ullam vel cumque expedita totam id
+                    quam voluptates, error suscipit delectus quia at maxime natus eum perferendis autem ad earum? Nam?
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellat magnam tempore impedit nobis sed
+                    aliquam amet voluptatum esse nihil enim laborum, beatae, dolorem numquam doloribus eos illo omnis ea
+                    unde.
+                </p>
             </div>
-        </div>
-        <div style="flex: 1 auto">
-            <form style="text-align: center; margin-top: 30px;" action="/article/add" method="POST">
-                <label for="title">Titre</label>
-                <input type="text" name="title" required style="width: 50%;">
-                <label for="desc">Description</label>
-                <textarea name="desc" rows="5" cols="33" style="width: 50%; height:auto" required></textarea>
-                <button type="submit">Creer</button>
-            </form>
+            <br />
+            <div class="container" id="num_page" style="text-align: center;"></div>
         </div>
     </div>
 </body>
 
 </html>
 <script>
-    fetch('/articles/all')
-        .then(function (response) {
-            console.log(response)
-            return response.json();
-        })
-        .then(function (data) {
-            appendData(data);
-        })
-        .catch(function (err) {
-            console.log('error: ' + err);
-        });
 
-
-    function appendData(data) {
-        var mainContainer = document.getElementById("data");
-        sessionStorage.SessionName = "SESSIONAVOLER"
-        sessionStorage.setItem("SESSIONAVOLER", "dueaghddagdeayudgfhufiua");
-        for (var i = 0; i < data.length; i++) {
-            var div = document.createElement("div");
-            var h2 = document.createElement("h2");
-            var span = document.createElement("span");
-
-            h2.innerHTML = data[i].title;
-            span.innerHTML = data[i].description;
-
-            div.classList.add("article");
-
-            div.appendChild(h2);
-            div.appendChild(span);
-
-            mainContainer.appendChild(div);
-        }
-    }
+    const queryString = window.location.search;
+    const urlParams = new URLSearchParams(queryString);
+    const num = urlParams.get('page');
+    var numPage = document.getElementById("num_page");
+    numPage.innerHTML = "Page " + num
 
 </script>
